# playchess

./: README.md  pyproject.toml  requirements_dev.txt  setup.cfg  tox.ini
src/playchess/: __init__.py  _castling_rights.py  _utils.py  board.py  config.py  driver.py  game.py  move.py  move_finder.py  piece.py  scorer.py  turn.py
src/playchess/images/: __init__.py
