[metadata]
name = playchess
description = A playable chess engine
author = Chinmaya Srivata
license = Apache-2.0 License
license_file = LICENSE
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.8

[options]
packages = find:
install_requires =
    pygame==2.1.2

package_dir =
    =src
zip_safe = no

[options.extras_require]
testing =
    pytest==7.1
    pytest-cov>=3.0
    mypy>=0.942
    flake8>=4.0
    tox>=3.24

[options.package_data]
playchess = py.typed

[flake8]
max-line-length = 160
per-file-ignores = __init__.py:F401

[options.packages.find]
where=src
